<resources>
<string name="app_name">CalcluladoraFragmentos</string>
    <string name="_7">7</string>
    <string name="x">×</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="dividir">÷</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="menos">-</string>
    <string name="_9">9</string>
    <string name="_.">.</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="igual">=</string>
    <string name="suma">+</string>
    <string name="resultado">resultado</string>
    <string name="del">DEL</string>
    <string name="c">C</string>
    <string name="abrir">Calculadora</string>
</resources>